# PhotoAssistant2

./: .gitattributes  .gitignore  PhotoAssistant.sln  README.md  UpgradeLog.htm
PhotoAssistant.Controls.Win/: PhotoAssistant.Controls.Win.csproj  PhotoAssistant.Controls.Win.csproj.bak
PhotoAssistant.Controls.Win/EditingControls/: ColorLabelsControl.cs  ColorTrackBarControl.cs  MultiTrackBarControl.cs  PictureNavigator.cs  ScrollableSpinEdit.cs
PhotoAssistant.Controls.Win/Helpers/: TrackBarWithSpinHelper.cs
PhotoAssistant.Controls.Win/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
PhotoAssistant.Controls.Wpf/: BackgroundImageLoader.cs  ColorPickerControl.cs  CropToolManager.cs  DoubleToStringConverter.cs  DoubleToThicknessConverter.cs  GridManager.cs  IPictureViewer.cs  PageTransferControl.cs  PhotoAssistant.Controls.Wpf.csproj  PhotoAssistant.Controls.Wpf.csproj.bak  PicturePreviewControl.cs  PicturePrintControl.cs  SimpleImage.cs  SplitPicturePreviewControl.cs  WatermarkControl.cs  WatermarkImageGenerator.cs  WatermarkPreviewControl.cs  WpfDragDropHelper.cs
PhotoAssistant.Controls.Wpf/Images/: CursorRotateBottom.cur  CursorRotateBottomLeft.cur  CursorRotateBottomRight.cur  CursorRotateLeft.cur  CursorRotateRight.cur  CursorRotateTop.cur  CursorRotateTopLeft.cur  CursorRotateTopRight.cur
PhotoAssistant.Controls.Wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
PhotoAssistant.Controls.Wpf/Themes/: Generic.xaml
PhotoAssistant.Core/: App.config  PhotoAssistant.Core.csproj  PhotoAssistant.Core.csproj.bak
PhotoAssistant.Core/Helpers/: AddFileHelper.cs  FileSizeHelper.cs  ImageLoader.cs  ImageUtils.cs  IndexerParameters.cs  Logger.cs  MD5Helper.cs  MediaFormatHelper.cs  ModelHelperBase.cs  StorageManager.cs  SupportedFileTypesHelper.cs  TagNodeReverseCalculator.cs  WIAHelper.cs
PhotoAssistant.Core/Model/: ColorLabelModel.cs  DbPropertiesModel.cs  DmContext.cs  DmContextInitializer.cs  DmStorageVolume.cs  ExportInfo.cs  FileInfoModel.cs  FileRenameUtils.cs  FileResizeUtils.cs  FilterValueModel.cs  MediaFormatModel.cs  MessageStrings.cs  Model.cs  SettingsStore.cs  TagModel.cs  TagNode.cs  WatermarkParams.cs
PhotoAssistant.Core/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PhotoAssistant.Core/Resources/: DefaultTags.xml
PhotoAssistant.ImageProcessing/: CMakeLists.txt  Makefile  PhotoAssistant.ImageProcessing.vcxproj  clean.bat  cmake_install.cmake  compile.bat  generate.bat  rebuild.bat  toolchain.cmake  toolchain.cmake.in  ustring.i  wrappers.i  wrappersGenerator.bat
PhotoAssistant.ImageProcessing/rt/: CMakeLists.txt  Win32CMakeOptions-MK1.txt
PhotoAssistant.ImageProcessing/rt/rtengine/: CA_correct_RT.cc  CMakeLists.txt  EdgePreserveLab.cc  EdgePreserveLab.h  EdgePreservingDecomposition.cc  EdgePreservingDecomposition.h  FTblockDN.cc  LUT.h  PF_correct_RT.cc  StopWatch.h  alignedbuffer.h  amaze_demosaic_RT.cc  array2D.h  bilateral2.h  boxblur.h  cJSON.c  cJSON.h  calc_distort.cc  calc_distort.h  camconst.cc  camconst.h  cfa_linedn_RT.cc  ciecam02.cc  ciecam02.h  cieimage.cc  cieimage.h  clutstore.cc  clutstore.h  color.cc  color.h  colorclip.h  colortemp.cc  colortemp.h  coord2d.h  cplx_wavelet_dec.cc  cplx_wavelet_dec.h  cplx_wavelet_filter_coeffs.h  cplx_wavelet_level.h  curves.cc  curves.h  (+113 more)
PhotoAssistant.ImageProcessing/rt/rtengine/klt/: convolve.cc  convolve.h  error.cc  klt.cc  klt.h  klt_util.cc  klt_util.h  pnmio.cc  pnmio.h  pyramid.cc  pyramid.h  selectGoodFeatures.cc  storeFeatures.cc  trackFeatures.cc  writeFeatures.cc
PhotoAssistant.ImageProcessing/rt/rtexif/: CMakeLists.txt  canonattribs.cc  fujiattribs.cc  kodakattribs.cc  nikonattribs.cc  olympusattribs.cc  pentaxattribs.cc  rtexif.cc  rtexif.h  sonyminoltaattribs.cc  stdattribs.cc
PhotoAssistant.ImageProcessing/rt/rtgui/: CMakeLists.txt  adjuster.h  batchqueue.h  batchqueuebuttonset.h  batchqueueentry.h  batchqueuepanel.h  batchtoolpanelcoord.h  bayerpreprocess.h  bayerprocess.h  bayerrawexposure.h  blackwhite.h  bqentryupdater.h  browserfilter.h  cacheimagedata.h  cachemanager.h  cacorrection.h  chmixer.h  clipboard.h  coarsepanel.h  colorappearance.h  coloredbar.h  colorprovider.h  colortoning.h  coord.h  coordinateadjuster.h  crop.h  cropguilistener.h  crophandler.h  cropwindow.h  cursormanager.h  curveeditor.h  curveeditorgroup.h  curvelistener.h  darkframe.h  defringe.h  diagonalcurveeditorsubgroup.h  dirbrowser.h  dirbrowserremoteinterface.h  dirpyrdenoise.h  dirpyrequalizer.h  (+123 more)
PhotoAssistant.Indexer/: App.config  DependentDlls.list  Indexer.cs  PhotoAssistant.Indexer.csproj  PhotoAssistant.Indexer.csproj.bak  Program.cs  copyDependentDlls.bat  log4.config
PhotoAssistant.Indexer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
PhotoAssistant.Indexer/Tests/: SimpleLinkTests.cs
PhotoAssistant.Indexer/Wrappers/: ActionCode.cs  AutoBWListener.cs  AutoCamListener.cs  AutoChromaListener.cs  AutoColorTonListener.cs  AutoExpListener.cs  AutoPartialProfile.cs  BatchProcessingListener.cs  BlackWhiteParams.cs  ByteOrder.cs  CACorrParams.cs  CPBKeyType.cs  ChannelMixerParams.cs  ChoiceInterpreter.cs  CoarseTransformParams.cs  ColorAppearanceParams.cs  ColorManagementParams.cs  ColorTemp.cs  ColorToningParams.cs  CommonTransformParams.cs  Coord2D.cs  CropParams.cs  DCPProfile.cs  DCPStore.cs  DefringeParams.cs  DetailedCrop.cs  DetailedCropListener.cs  DirPyrDenoiseParams.cs  DirPyrEqualizerParams.cs  DistortionParams.cs  (+120 more)
PhotoAssistant.Tests/: App.config  ExportInfoTest.cs  FileRenameManagerTests.cs  FileResizeManagerTests.cs  IndexerCommandlineTests.cs  ModelTests.cs  PhotoAssistant.Tests.csproj  PhotoAssistant.Tests.csproj.bak  StorageManagerTests.cs  WatermarkImageGeneratorTests.cs
PhotoAssistant.UI/: App.config  MessageFilter.cs  PhotoAssistant.UI.csproj  PhotoAssistant.UI.csproj.bak  Program.cs
PhotoAssistant.Utils/: PhotoAssistant.Utils.csproj
dlls/: DXDependentDlls.list  copyDependentDlls.bat  files.txt  updateLib.bat
(+207 files in other folders)
